--- a/index.html
+++ b/index.html
@@ -1,167 +1,121 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME | Sample Site</title>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-        }
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        a, p, h1, h2, h3, h4, h5, h6 {
-            color: #333;
-        }
-        /*a, p, h1, h2, h3, h4, h5, h6 {
-            padding: 10px 20px 10px 20px;
-        }*/
-        .container {
-            max-width: 900px;
-            margin: auto;
-            border-left: 1px solid #333;
-            border-right: 1px solid #333;
-        }
-        header {
-            background-color: #333;
-        }
-        header nav {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
-        header nav a {
-            padding: 10px;
-            color: white;
-            text-decoration: none;
-        }
-        header nav a:hover {
-            color: cyan;
-        }
-        section {
-            padding: 20px;
-        }
-        main {
-            float: left;
-            width: 70%;
-        }
-        main p {
-            font-size: 1.1rem;
-            line-height: 1.6rem;
-            padding: 0px 20px 0px 20px;
-        }
-        aside {
-            float: right;
-            width: 25%;
-        }
-        aside p {
-            font-size: 1.1rem;
-            line-height: 1.6rem;
-            padding: 20px;
-        }
-        /* aside ul {
-            padding: 0px 20px 0px 20px;
-        } */
-        aside ul li {
-            font-size: 1.1rem;
-            line-height: 1.6rem;
-            list-style: none;
-            padding: 3px 0px 3px 0px;
-        }
-        footer {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: #333;            
-            width: 100%;
-        }
-        footer p {
-            color: white;
-            padding: 10px;
-        }
-        footer a {
-            color: white;
-            padding: 0px 10px 0px 10px;
-        }
-        footer a:hover {
-            color: cyan;
-        }
-        @media (max-width: 700px) {
-            main {
-                float: none;
-                width: 100%;
-            }
-            aside {
-                float: none;
-                width: 100%;
-                padding: 20px;
-            }
-        }
-    </style>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width">
+  <title>MathJax v3 dynamic equations using CSS and javascript</title>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script>
+  MathJax = {
+    tex: {inlineMath: [['$', '$'], ['\\(', '\\)']]},
+    chtml: {
+      displayAlign: 'left'
+    },
+    startup: {
+      ready: function () {
+        //
+        //  Do the usual startup (which does a typeset)
+        //
+        MathJax.startup.defaultReady();
+        //
+        //  When that is all done, un-hide the page
+        //
+        MathJax.startup.promise.then(function () {
+          document.getElementById("hidden").disabled = true;
+        });
+      }
+    }
+  };
+  </script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+
+  <script type="text/javascript">
+  //
+  //  Use a closure to hide the local variable
+  //
+  (function () {
+    var n = 1;
+
+    //
+    //  Make the current step be visible, and increment the step.
+    //  If it is the last step, disable the step button.
+    //  Once a step is taken, the reset button is made available.
+    //
+    window.ShowStep = function () {
+      document.getElementById("Step" + n++).style.visibility = "visible";
+      if (!document.getElementById("Step" + n)) {
+        document.getElementById("step").disabled = true;
+      }
+      document.getElementById("reset").disabled = false;
+    }
+
+    //
+    //  Enable the step button and disable the reset button.
+    //  Hide the steps.
+    //
+    window.ResetSteps = function () {
+      document.getElementById("step").disabled = false;
+      document.getElementById("reset").disabled = true;
+      var i = 1, step; n = 1;
+      while (step = document.getElementById("Step" + i)) {
+        step.style.visibility = "hidden";
+        i++
+      }
+    }
+  })();
+  </script>
+
+  <style>
+    /*
+     *  Start with the steps being hidden
+     */
+    #Step1, #Step2, #Step3, #Step4, #Step5 {
+      visibility: hidden;
+    }
+
+    h1 {
+      background: #CCCCCC;
+      padding: .2em 1em;
+      border-top: 3px solid #666666;
+      border-bottom: 3px solid #999999;
+    }
+
+    #frame {
+      margin-left: 2em;
+    }
+
+  </style>
+
+  <style id="hidden">
+    body {
+      visibility: hidden;
+    }
+  </style>
+
 </head>
 <body>
-    <div class="container">
-        <header>
-            <nav>
-                <a href="index.html">HOME</a>
-                <a href="about.html">ABOUT</a>
-                <a href="contact.html">CONTACT</a>
-            </nav>
-        </header>
-        <main>
-            <section>
-                <h2>Blog Post #1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, dolor at. Consequatur voluptatibus aliquid, ea fugiat eveniet quae. Pariatur non quam odit voluptate dolor similique quae quibusdam, eius nesciunt qui ducimus delectus dicta dolorum unde cupiditate molestiae aspernatur cumque illum sapiente inventore. Quis quas, aut qui asperiores odit eum non.</p>
-            </section>
-            <hr>
-            <section>
-                <h2>Blog Post #1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, dolor at. Consequatur voluptatibus aliquid, ea fugiat eveniet quae. Pariatur non quam odit voluptate dolor similique quae quibusdam, eius nesciunt qui ducimus delectus dicta dolorum unde cupiditate molestiae aspernatur cumque illum sapiente inventore. Quis quas, aut qui asperiores odit eum non.</p>
-            </section>
-            <hr>
-            <section>
-                <h2>Blog Post #1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, dolor at. Consequatur voluptatibus aliquid, ea fugiat eveniet quae. Pariatur non quam odit voluptate dolor similique quae quibusdam, eius nesciunt qui ducimus delectus dicta dolorum unde cupiditate molestiae aspernatur cumque illum sapiente inventore. Quis quas, aut qui asperiores odit eum non.</p>
-            </section>
-            <hr>
-            <section>
-                <h2>Blog Post #1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, dolor at. Consequatur voluptatibus aliquid, ea fugiat eveniet quae. Pariatur non quam odit voluptate dolor similique quae quibusdam, eius nesciunt qui ducimus delectus dicta dolorum unde cupiditate molestiae aspernatur cumque illum sapiente inventore. Quis quas, aut qui asperiores odit eum non.</p>
-            </section>
-            <hr>
-            <section>
-                <h2>Blog Post #1</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, dolor at. Consequatur voluptatibus aliquid, ea fugiat eveniet quae. Pariatur non quam odit voluptate dolor similique quae quibusdam, eius nesciunt qui ducimus delectus dicta dolorum unde cupiditate molestiae aspernatur cumque illum sapiente inventore. Quis quas, aut qui asperiores odit eum non.</p>
-            </section>
-            <hr>            
-        </main>
-        <aside>
-            <h3>About</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo expedita ea nulla aspernatur nobis corporis sint, ipsam fuga dolore reiciendis beatae nam accusantium quibusdam aliquam cupiditate, labore temporibus placeat earum?</p>
-            <hr>
-            <h3>Recent Posts</h3>
-            <ul>
-                <li><a href="#">Blog Post #5</a></li>
-                <li><a href="#">Blog Post #4</a></li>
-                <li><a href="#">Blog Post #3</a></li>
-                <li><a href="#">Blog Post #2</a></li>
-                <li><a href="#">Blog Post #1</a></li>
-            </ul>
-        </aside>
-        <footer>
-            <section>
-                <p>Skip to page:</p>
-                <a href="page-2.html">2</a>
-                <a href="#">3</a>
-                <a href="#">4</a>
-                <a href="#">5</a>
-            </section>
-            <p style="padding: 0px 10px 25px 10px;">Copyright &copy; 2020 Sample.Site.whatever</p>
-        </footer>
-    </div>
+<h1>Dynamic Equations in MathJax</h1>
+
+<div id="frame">
+<p>
+Expand the following:
+\begin{align}
+  (x+1)^2
+    &= \cssId{Step1}{(x+1)(x+1)}            \\[3px]
+    &\cssId{Step2}{{} = x(x+1) + 1(x+1)}    \\[3px]
+    &\cssId{Step3}{{} = (x^2+x) + (x+1)}    \\[3px]
+    &\cssId{Step4}{{} = x^2 + (x + x) + 1}  \\[3px]
+    &\cssId{Step5}{{} = x^2 + 2x + 1}
+\end{align}
+</p>
+
+<p>
+<input type="button" onclick="ShowStep()" value="Show Next Step" id="step" />
+<input type="button" onclick="ResetSteps()" value="Reset" id="reset"
+disabled="true" />
+</p>
+
+</div>
+
 </body>
 </html>
