--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
-
 <!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width">
-  <title>MathJax v3 loaded only if there is math</title>
+  <title>MathJax example</title>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-  <script src="load-mathjax.js" defer></script>
+  <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
 </head>
 <body>
-
-This is math: $x+1\over x-1$
-
-<math xmlns="http://www.w3.org/1998/Math/MathML">
-  <mi>x</mi>
-</math>
-
+<p>
+  When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
+  \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]
+</p>
 </body>
 </html>
