--- a/index.html
+++ b/index.html
@@ -149,10 +149,7 @@
             <section>
                 <h2>Blog Post #1</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, dolor at. Consequatur voluptatibus aliquid, ea fugiat eveniet quae. Pariatur non quam odit voluptate dolor similique quae quibusdam, eius nesciunt qui ducimus delectus dicta dolorum unde cupiditate molestiae aspernatur cumque illum sapiente inventore. Quis quas, aut qui asperiores odit eum non.</p>
-          <p>
-  When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
-  \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]
-</p>  
+          <p>When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\] </p>  
           
           </section>
           
