--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         main p {
             font-size: 1.1rem;
             line-height: 1.6rem;
+            margin: 15px 0;
             padding: 0px 20px 0px 20px;
         }
         aside {
