--- a/index.html
+++ b/index.html
@@ -10,5 +10,44 @@
 <body>
 When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
 $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+  
+  <h1>The Right Triangle</h1>
+
+  <h2>Base Geometry</h2>
+
+![](./triangle.png)
+
+  <p>Let the right triangle hypothenuse be aligned with the coordinate system <em>x-axis</em>. 
+  The vector loop closure equation running counter-clockwise then reads</p>
+
+$$a{\bold e}_\alpha + b\tilde{\bold e}_\alpha + c{\bold e}_x = \bold 0$$ (1)
+
+  <p>with</p>
+
+$${\bold e}_\alpha = \begin{pmatrix}\cos\alpha\\ \sin\alpha\end{pmatrix} \quad and \quad {\tilde\bold e}_\alpha = \begin{pmatrix}-\sin\alpha\\ \cos\alpha\end{pmatrix}$$
+
+  <p>Resolving for the hypothenuse part $c{\bold e}_x$ in the loop closure equation (1)</p>
+
+$$-c{\bold e}_x = a{\bold e}_\alpha + b\tilde{\bold e}_\alpha$$
+
+  <p>and squaring</p> 
+
+<blockquote> finally results in the Pythagorean theorem (2)
+
+ $$c^2 = 
+ a^2 + 
+ b^2$$ (2)
+</blockquote>
+
+  <h2> More Triangle Stuff</h2>
+
+<p>Introducing the hypothenuse segments $p={\bold a}\cdot{\bold e}_x$ and  $q={\bold b}\cdot{\bold e}_x$, we can further obtain the following useful formulas.</p>
+
+
+| segment *p* | segment *q* | height *h* | area |
+|:---:|:---:|:---:|:---:|
+|$cp = a^2$|$cq = b^2$|$pq = h^2$|$ab = ch$|
+
+  
 </body>
 </html>
