--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@ $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
   <p>Let the right triangle hypothenuse be aligned with the coordinate system <em>x-axis</em>. 
   The vector loop closure equation running counter-clockwise then reads</p>
 
-$$a{\bold e}_\alpha + b\tilde{\bold e}_\alpha + c{\bold e}_x = \bold 0$$ (1)
+$$a\boldsymbol{e}_\alpha + b\tilde\boldsymbol{e}_\alpha + c\boldsymbol{e}_x = \boldsymbol{0}$$ (1)
 
   <p>with</p>
 
-$${\bold e}_\alpha = \begin{pmatrix}\cos\alpha\\ \sin\alpha\end{pmatrix} \quad and \quad {\tilde\bold e}_\alpha = \begin{pmatrix}-\sin\alpha\\ \cos\alpha\end{pmatrix}$$
+$$\boldsymbol{e}_\alpha = \begin{pmatrix}\cos\alpha\\ \sin\alpha\end{pmatrix} \quad and \quad {\tilde\boldsymbol{e}}_\alpha = \begin{pmatrix}-\sin\alpha\\ \cos\alpha\end{pmatrix}$$
 
   <p>Resolving for the hypothenuse part $c{\bold e}_x$ in the loop closure equation (1)</p>
 
-$$-c{\bold e}_x = a{\bold e}_\alpha + b\tilde{\bold e}_\alpha$$
+$$-c\boldsymbol{e}_x = a{\boldsymbol{e}}_\alpha + b\tilde{\boldsymbol{e}}_\alpha$$
 
   <p>and squaring</p> 
 
