--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ $$a{\boldsymbol{e}}_\alpha + b\tilde{\boldsymbol{e}}_\alpha + c{\boldsymbol{e}}_
 
   <p>with</p>
 
-$${\boldsymbol{e}}_\alpha = \begin{pmatrix}\cos\alpha\\ \sin\alpha\end{pmatrix} \quad and \quad {\tilde\boldsymbol{e}}_\alpha = \begin{pmatrix}-\sin\alpha\\ \cos\alpha\end{pmatrix}$$
+$${\boldsymbol{e}}_\alpha = \begin{pmatrix}\cos\alpha\\ \sin\alpha\end{pmatrix} \quad and \quad {\tilde{\boldsymbol{e}}}_\alpha = \begin{pmatrix}-\sin\alpha\\ \cos\alpha\end{pmatrix}$$
 
   <p>Resolving for the hypothenuse part $c{\bold e}_x$ in the loop closure equation (1)</p>
 
