--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </script>
 </head>
 <body>
-When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
-$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+When <math display="inline">\(a \ne 0\)</math>, there are two solutions to <math display="block">\(ax^2 + bx + c = 0\)</math> and they are
+<math display="block">$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$</math>
   
   <h1>The Right Triangle</h1>
 
@@ -20,24 +20,24 @@ $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
   <p>Let the right triangle hypothenuse be aligned with the coordinate system <em>x-axis</em>. 
   The vector loop closure equation running counter-clockwise then reads</p>
 
-<blockquote>$$a{\boldsymbol{e}}_\alpha + b\tilde{\boldsymbol{e}}_\alpha + c{\boldsymbol{e}}_x = {\boldsymbol{0}}$$ (1)</blockquote>
+<math display="block">$$a{\boldsymbol{e}}_\alpha + b\tilde{\boldsymbol{e}}_\alpha + c{\boldsymbol{e}}_x = {\boldsymbol{0}}$$ (1)</math>
 
   <p>with</p>
 
-<blockquote>$${\boldsymbol{e}}_\alpha = \begin{pmatrix}\cos\alpha\\ \sin\alpha\end{pmatrix} \quad and \quad {\tilde{\boldsymbol{e}}}_\alpha = \begin{pmatrix}-\sin\alpha\\ \cos\alpha\end{pmatrix}$$</blockquote>
+<math display="block">$${\boldsymbol{e}}_\alpha = \begin{pmatrix}\cos\alpha\\ \sin\alpha\end{pmatrix} \quad and \quad {\tilde{\boldsymbol{e}}}_\alpha = \begin{pmatrix}-\sin\alpha\\ \cos\alpha\end{pmatrix}$$</math>
 
   <p>Resolving for the hypothenuse part $c{\bold e}_x$ in the loop closure equation (1)</p>
 
-<blockquote>$$-c\boldsymbol{e}_x = a{\boldsymbol{e}}_\alpha + b\tilde{\boldsymbol{e}}_\alpha$$</blockquote>
+<math display="block">$$-c\boldsymbol{e}_x = a{\boldsymbol{e}}_\alpha + b\tilde{\boldsymbol{e}}_\alpha$$</math>
 
   <p>and squaring</p> 
 
-<blockquote> finally results in the Pythagorean theorem (2)
+<math display="block"> finally results in the Pythagorean theorem (2)
 
  $$c^2 = 
  a^2 + 
  b^2$$ (2)
-</blockquote>
+</math>
 
   <h2> More Triangle Stuff</h2>
 
