--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </script>
 </head>
 <body>
-When <math>\\(a \ne 0\\)</math>, there are two solutions to <math>\(ax^2 + bx + c = 0\)</math> and they are
-<math display="block">$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$</math>
+<p>When <math>\(a \ne 0\)</math>, there are two solutions to <math>\(ax^2 + bx + c = 0\)</math> and they are
+  <math display="block">$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$</math></p>
   
   <h1>The Right Triangle</h1>
 
