--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </script>
 </head>
 <body>
-<p>When $$a \ne 0$$, there are two solutions to <math>\(ax^2 + bx + c = 0\)</math> and they are
+  <p>When <math>\(a \ne 0\)</math>, there are two solutions to <math>\(ax^2 + bx + c = 0\)</math> and they are
   <math display="block">$$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$</math></p>
   
   <h1>The Right Triangle</h1>
